# primer-designer

./: LICENSE  README.md  main.py  pyproject.toml  test.py
.github/workflows/: publish.yml  test.yml
primer_designer/: __init__.py  api.py  cli.py  core.py  sequence.py
tests/: __init__.py  test_sequence.py
